--- a/theme/cool_board_swfupload/style.css
+++ b/theme/cool_board_swfupload/style.css
@@ -92,6 +92,8 @@
 #GRBOARD div.viewTag:hover { border: #ccc 1px solid; }
 #GRBOARD .modifyTime { font-size: 10px; color: #ddd; }
 #writeBy { font-size: 11px; font-family: Dotum, 돋움, sans-serif; color: #ccc; text-align: right; }
+#GRBOARD .addedPhotoThumb { padding-bottom: 20px; text-align: center; }
+#GRBOARD .addedPhotoBottom { margin: 0 5px 5px 0; border: #333 1px solid; }
 
 /* Comment view */
 #layerCoWrite { width: 570px; border: #aaa 2px solid; border-radius: 10px; -webkit-border-radius: 10px; -moz-border-radius: 10px; padding: 5px; background-color: #fff; margin: 15px auto; }
